[package]
name = "prost-example"
version = "0.5.1"
edition = "2018"
authors = ["kingxsp <jin.hb.zh@outlook.com>", "Yuki Okushi <huyuumi.dev@gmail.com>"]

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-protobuf = { path = "../../" }

bytes = "1.1.0"
env_logger = "*"

prost = "0.9.0"
prost-derive = "0.9.0"
